feat: Add complete VPS Ubuntu build system with GitHub Releases
- Add TXASetupEnvironment.sh for VPS environment setup (Java 11, Android SDK)
- Add TXABuild.sh with keystore generation, process cleanup, validation
- Add TXAQuickBuild.sh for fast debug/release builds
- Add TXAUploadToGitHub.sh for GitHub Releases API integration
- Add .env.example with security configuration template
- Add comprehensive build/README.md documentation
- Update .gitignore to exclude keystore files and build outputs
- Features: graceful process shutdown, disk space check, APK validation
- Security: keystore passwords in .env, files gitignored
- Output: TXADEMO-{version}-{type}.apk in TXABUILD folder
- Upload options: git commit (deprecated) or GitHub Releases (recommended)

Build system ready for Ubuntu VPS deployment with automated error handling
and production-grade security measures.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,11 @@ lint-results.xml
 
 # Temp file
 abc.txt
+
+# Build environment (security)
+build/.env
+*.keystore
+*.jks
+
+# Build outputs
+TXABUILD/
