feat: Complete production-ready VPS Ubuntu build system
- Add TXABackupKeystore.sh for GPG-encrypted keystore backups
- Update gradle.properties with VPS optimizations (parallel, cache, daemon)
- Add keystore alias verification to prevent build failures
- Add automatic backup after keystore generation
- Update .gitignore to exclude keystore-backups/ folder
- Security: encrypted backups, keystore validation, secure .env handling
- Performance: Gradle optimizations for faster VPS builds
- Reliability: comprehensive error handling, APK validation, process cleanup
- Integration: GitHub Releases API (recommended over git commits)

Production-ready features:
 Auto-generate keystore (alias: txademo) with validation
 Encrypted backup system with GPG
 GitHub Releases integration
 VPS-optimized Gradle settings
 Security measures (gitignore, .env, keystore protection)
 Error handling with immediate failure
 Process cleanup and disk space validation
 APK validation and size checks
 Comprehensive documentation

Ready for Ubuntu VPS deployment with automated error handling.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,29 @@
+# FILE BY TXA
+# Contact: https://fb.com/vlog.txa.2311
+# TXA Demo - Gradle Optimization Properties
+# Optimized for VPS Ubuntu builds
+
+# Project-wide Gradle settings
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
+org.gradle.configureondemand=true
+
+# Android-specific optimizations
 android.useAndroidX=true
 android.enableJetifier=true
-kotlin.code.style=official
+android.enableBuildCache=true
+android.enableR8.fullMode=true
+
+# Build performance
+android.enableSeparateAnnotationProcessing=true
+android.enableIncrementalDesugaring=true
+
+# Memory optimization for VPS
+org.gradle.workers.max=2
+org.gradle.vfs.watch=true
+
+# Enable configuration cache (Gradle 7.0+)
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
