--- a/gradle.properties
+++ b/gradle.properties
@@ -1,29 +1,38 @@
-# FILE BY TXA
-# Contact: https://fb.com/vlog.txa.2311
-# TXA Demo - Gradle Optimization Properties
-# Optimized for VPS Ubuntu builds
-
-# Project-wide Gradle settings
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.parallel=true
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseG1GC -XX:MaxGCPauseMillis=200
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+org.gradle.parallel=false
+# AndroidX package structure to make it clearer which packages are bundled with the
+# Android operating system, and which are packaged with your app's APK
+# https://developer.android.com/topic/libraries/support-library/androidx-rn
+android.useAndroidX=true
+android.enableJetifier=false
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.code.style=official
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
+# Gradle daemon settings
+org.gradle.daemon.idle_timeout=1200000
 org.gradle.caching=true
-org.gradle.daemon=true
 org.gradle.configureondemand=true
 
-# Android-specific optimizations
-android.useAndroidX=true
-android.enableJetifier=true
-android.enableBuildCache=true
-android.enableR8.fullMode=true
+# KSP optimization settings
+ksp.incremental=true
+ksp.incremental.log=true
 
-# Build performance
-android.enableSeparateAnnotationProcessing=true
-android.enableIncrementalDesugaring=true
-
-# Memory optimization for VPS
-org.gradle.workers.max=2
-org.gradle.vfs.watch=true
-
-# Enable configuration cache (Gradle 7.0+)
-org.gradle.configuration-cache=true
-org.gradle.configuration-cache.problems=warn
+# Kotlin daemon optimization
+kotlin.daemon.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=256m -XX:+UseG1GC
+kotlin.daemon.enabled=true
+kotlin.incremental=true
+kotlin.build.report.output=file
