--- a/gradle.properties
+++ b/gradle.properties
@@ -4,24 +4,31 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
+
+# Tăng dung lượng JVM vì VPS có 16GB RAM để tăng tốc độ build
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseG1GC -XX:MaxGCPauseMillis=200
+org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseG1GC -XX:MaxGCPauseMillis=200
+
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=false
+
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 android.enableJetifier=false
+
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
 # Gradle daemon settings
 org.gradle.daemon.idle_timeout=1200000
 org.gradle.caching=true
@@ -31,8 +38,8 @@ org.gradle.configureondemand=true
 ksp.incremental=true
 ksp.incremental.log=true
 
-# Kotlin daemon optimization
-kotlin.daemon.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=256m -XX:+UseG1GC
+# Kotlin daemon optimization (tăng dung lượng bộ nhớ cho Kotlin daemon)
+kotlin.daemon.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=512m -XX:+UseG1GC
 kotlin.daemon.enabled=true
 kotlin.incremental=true
 kotlin.build.report.output=file
