Implement background download system with notification management
Features:
- TXADownloadService: Foreground service with real-time progress notifications
- Notification actions: Cancel download & Return to App buttons
- Download state persistence: Survives app restarts via SharedPreferences
- UI integration: Progress dialog restoration when returning from notification
- Permission handling: Android 13+ notifications, Android 14+ foreground service types
- Resume mechanism: Handles service restart and interrupted downloads
- Frequent cancellation checks: Every 4KB chunk for responsive cancellation

Technical implementation:
- OkHttp streaming downloads with proper file I/O
- LocalBroadcastManager for real-time progress updates
- Notification channels with low importance for silent updates
- Proper cleanup and broadcast receiver management
- Android compatibility: API 28+ with proper permissions and service types

Files added/modified:
- TXADownloadService.kt (new): Complete foreground download service
- AndroidManifest.xml: Added permissions and service declaration
- TXAUpdateManager.kt: Added background download integration
- TXASettingsActivity.kt: Added notification permissions and dialog restoration
- TXATranslation.kt: Added notification translation keys

Signed-off-by: TXA Demo <txa@example.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,15 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    
+    <!-- Foreground Service Permission for Android 9+ -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    
+    <!-- Foreground Service Type for Android 14+ -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    
+    <!-- Notification Permission for Android 13+ -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name=".TXAApp"
@@ -55,6 +64,13 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.TXADemo.NoActionBar" />
+
+        <!-- Download Service -->
+        <service
+            android:name=".download.TXADownloadService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync" />
 
         <!-- FileProvider for APK installation -->
         <provider
