--- a/.gitignore
+++ b/.gitignore
@@ -89,9 +89,9 @@ build/.env
 
 # Build artifacts (keep TXABUILD/ for APK distribution)
 app/build/*
-build/reports/*
-build/tmp/*
-build/intermediates/*
+buildsc/reports/*
+buildsc/tmp/*
+buildsc/intermediates/*
 
 # Keystore backups (security)
 keystore-backups/
