--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,17 +63,6 @@ android {
         }
     }
 
-    // Suppress incubating warnings
-    tasks.withType(JavaCompile).configureEach {
-        options.compilerArgs += ['-Xlint:-deprecation']
-    }
-    
-    tasks.withType(KotlinCompile).configureEach {
-        kotlinOptions {
-            freeCompilerArgs += ['-Xsuppress-warnings=EXPERIMENTAL_API_USAGE']
-        }
-    }
-
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.4'
     }
@@ -179,4 +168,15 @@ kapt {
 
 hilt {
     enableAggregatingTask = true
+}
+
+// Suppress incubating warnings (placed outside android block per Gradle API requirements)
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['-Xlint:-deprecation']
+}
+
+tasks.withType(KotlinCompile).configureEach {
+    kotlinOptions {
+        freeCompilerArgs += ['-Xsuppress-warnings=EXPERIMENTAL_API_USAGE']
+    }
 }
