--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,7 +175,7 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['-Xlint:-deprecation']
 }
 
-tasks.withType(KotlinCompile).configureEach {
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += ['-Xsuppress-warnings=EXPERIMENTAL_API_USAGE']
     }
