--- a/app/build.gradle
+++ b/app/build.gradle
@@ -175,8 +175,9 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs += ['-Xlint:-deprecation']
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        freeCompilerArgs += ['-Xsuppress-warnings=EXPERIMENTAL_API_USAGE']
-    }
-}
+// Note: Removed Kotlin warning suppression as flag is not supported
+// tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+//     kotlinOptions {
+//         freeCompilerArgs += ['-Xsuppress-warnings=EXPERIMENTAL_API_USAGE']
+//     }
+// }
