--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ ksp.incremental.log=true
 
 # Kotlin daemon optimization (tăng dung lượng bộ nhớ cho Kotlin daemon)
 kotlin.daemon.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=512m -XX:+UseG1GC
-kotlin.daemon.enabled=true
+kotlin.daemon.enabled=false
+
 kotlin.incremental=true
 kotlin.build.report.output=file
