--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
@@ -99,10 +99,10 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.6.1'
     
     // Hilt Dependency Injection
-    implementation 'com.google.dagger:hilt-android:2.48.1'
-    implementation 'androidx.hilt:hilt-work:1.1.0'
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
-    kapt 'com.google.dagger:hilt-compiler:2.48.1'
+    implementation 'com.google.dagger:hilt-android:2.51.1'
+    implementation 'androidx.hilt:hilt-work:1.2.0'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
+    kapt 'com.google.dagger:hilt-compiler:2.51.1'
     
     // Media3 (ExoPlayer, MediaSession, UI)
     implementation 'androidx.media3:media3-exoplayer:1.2.1'
@@ -152,8 +152,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.media3:media3-test-utils:1.2.1'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.48.1'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.48.1'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.51.1'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.51.1'
 }
 
 // Allow references to generated code
