--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version '1.9.24-1.0.20.0'
 }
 
 android {
@@ -99,10 +100,10 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.6.1'
     
     // Hilt Dependency Injection
-    implementation 'com.google.dagger:hilt-android:2.51.1'
+    implementation 'com.google.dagger:hilt-android:2.50'
     implementation 'androidx.hilt:hilt-work:1.2.0'
     implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
-    kapt 'com.google.dagger:hilt-compiler:2.51.1'
+    ksp 'com.google.dagger:hilt-compiler:2.50'
     
     // Media3 (ExoPlayer, MediaSession, UI)
     implementation 'androidx.media3:media3-exoplayer:1.2.1'
@@ -152,13 +153,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.media3:media3-test-utils:1.2.1'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.51.1'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.51.1'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.50'
+    kspAndroidTest 'com.google.dagger:hilt-compiler:2.50'
 }
 
 // Allow references to generated code
 kapt {
     correctErrorTypes true
+}
+
+// KSP configuration
+ksp {
+    correctErrorTypes = true
 }
 
 hilt {
