--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
     id 'com.google.devtools.ksp' version '1.9.24-1.0.20.0'
@@ -50,15 +49,6 @@ android {
         dataBinding true
     }
 
-    kapt {
-        correctErrorTypes true
-        arguments {
-            arg("room.schemaLocation", "$projectDir/schemas")
-            arg("room.incremental", "true")
-            arg("room.expandProjection", "true")
-        }
-    }
-
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.4'
     }
@@ -97,7 +87,7 @@ dependencies {
     // Room Database
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
+    ksp 'androidx.room:room-compiler:2.6.1'
     
     // Hilt Dependency Injection
     implementation 'com.google.dagger:hilt-android:2.50'
@@ -157,14 +147,12 @@ dependencies {
     kspAndroidTest 'com.google.dagger:hilt-compiler:2.50'
 }
 
-// Allow references to generated code
-kapt {
-    correctErrorTypes true
-}
-
 // KSP configuration
 ksp {
     correctErrorTypes = true
+    arg("room.schemaLocation", "$projectDir/schemas")
+    arg("room.incremental", "true")
+    arg("room.expandProjection", "true")
 }
 
 hilt {
