Thêm allprojects repositories cho KSP plugin
- Thêm gradlePluginPortal() để tìm KSP plugin
- Giải quyết lỗi KSP plugin not found

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,14 @@ plugins {
     id 'androidx.room' version '2.6.0' apply false
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
