--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version '1.9.24-1.0.20.0'
 }
 
 android {
@@ -36,26 +36,17 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
         viewBinding true
         dataBinding true
-    }
-
-    kapt {
-        correctErrorTypes true
-        arguments {
-            arg("room.schemaLocation", "$projectDir/schemas")
-            arg("room.incremental", "true")
-            arg("room.expandProjection", "true")
-        }
     }
 
     composeOptions {
@@ -96,13 +87,13 @@ dependencies {
     // Room Database
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
-    kapt 'androidx.room:room-compiler:2.6.1'
+    ksp 'androidx.room:room-compiler:2.6.1'
     
     // Hilt Dependency Injection
-    implementation 'com.google.dagger:hilt-android:2.48.1'
-    implementation 'androidx.hilt:hilt-work:1.1.0'
-    implementation 'androidx.hilt:hilt-navigation-fragment:1.1.0'
-    kapt 'com.google.dagger:hilt-compiler:2.48.1'
+    implementation 'com.google.dagger:hilt-android:2.50'
+    implementation 'androidx.hilt:hilt-work:1.2.0'
+    implementation 'androidx.hilt:hilt-navigation-fragment:1.2.0'
+    ksp 'com.google.dagger:hilt-compiler:2.50'
     
     // Media3 (ExoPlayer, MediaSession, UI)
     implementation 'androidx.media3:media3-exoplayer:1.2.1'
@@ -152,13 +143,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.media3:media3-test-utils:1.2.1'
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.48.1'
-    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.48.1'
+    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.50'
+    kspAndroidTest 'com.google.dagger:hilt-compiler:2.50'
 }
 
-// Allow references to generated code
-kapt {
-    correctErrorTypes true
+// KSP configuration
+ksp {
+    correctErrorTypes = true
+    arg("room.schemaLocation", "$projectDir/schemas")
+    arg("room.incremental", "true")
+    arg("room.expandProjection", "true")
 }
 
 hilt {
