--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
-    id 'com.google.devtools.ksp' version '1.9.24-1.0.20.0'
+    id("com.google.devtools.ksp") version "1.9.24-1.0.20" apply false
 }
 
 android {
