--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,6 @@ org.gradle.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfM
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-org.gradle.parallel=false
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -44,3 +43,10 @@ kotlin.daemon.enabled=false
 
 kotlin.incremental=true
 kotlin.build.report.output=file
+
+# Enable Configuration Cache for Gradle 10 compatibility
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
+
+# Enable parallel builds
+org.gradle.parallel=true
