build: TXAMusic-1.0.0_txa-debug

--- a/buildsc/.env
+++ b/buildsc/.env
@@ -7,8 +7,8 @@ KEYSTORE_PASSWORD=
 KEY_PASSWORD=
 
 # Git configuration for commits
-GIT_EMAIL=
-GIT_NAME=
+GIT_EMAIL=viptretrauc@gmail.com
+GIT_NAME=TXAVLOG
 
 # Build configuration
 BUILD_TYPE=debug  # debug or release
