feat: customize UI/Theme/Icon + Fix MusicService notification
Features:
- New Theme Settings: System / Light / Dark mode support.
- Custom Fonts: 'Soyuz Grotesk' (local) for VN, 'Lobster' (downloadable) for EN.
- Custom App Icon: Stylish 't' with gradient background.
- UI Contrast fixes in themes.xml.

Fixes:
- MusicService build error: Added 'androidx.media' dependency.
- Reverted to 'NotificationCompat.MediaStyle' for reliable custom actions.
- Implemented Update Dialog UI in SettingsActivity.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,9 +21,11 @@ gson = "2.11.0"
 lifecycle = "2.8.7"
 navigation = "2.8.5"
 serializationJson = "1.7.3"
+androidx-media = "1.7.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-media = { group = "androidx.media", name = "media", version.ref = "androidx-media" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
