feat: Pill MiniPlayer & Customizable Notification - Namida-inspired
New Features:
- TXAPillMiniPlayer: Dynamic Island-like expandable miniplayer with gesture control
- TXAMiniPlayerController: Animation state management for expand/collapse
- TXAAlbumArtView: Custom ImageView with shape styles (square/rounded/circle), drop shadow, fade animation, vinyl rotation
- TXANotificationHelper: Customizable media notification with configurable buttons
- TXANowBarSettingsActivity: Settings screen for Now Bar button customization

New UI Components:
- txa_pill_miniplayer.xml: Pill-shaped miniplayer layout with progress, controls
- activity_txa_now_bar_settings.xml: Settings screen with preview card
- Item layouts for settings (switch, choice, divider)

New Icons:
- ic_previous, ic_next, ic_stop, ic_shuffle, ic_repeat
- ic_heart, ic_sleep, ic_lyrics

Enhanced TXANowBarSettingsManager:
- Album art style constants (ALBUM_ART_SQUARE, ALBUM_ART_ROUNDED, ALBUM_ART_CIRCLE)
- Multiple getAlbumArtStyle overloads (String and Int)

New Translation Keys:
- txamusic_confirm_reset, txamusic_settings_reset
- txamusic_ok, txamusic_cancel

References: Inspired by Namida's miniplayer and artwork widgets

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,8 @@
         
         <activity android:name=".ui.TXASettingsActivity" />
         <activity android:name=".ui.TXAMusicLibraryActivity" />
+        <activity android:name=".ui.TXANowBarSettingsActivity" 
+                  android:label="Now Bar Settings" />
 
         <service
             android:name=".service.MusicService"
