--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Update README.md
         run: |
           # Use sed to replace content between markers
-          sed -i "s/<!-- VERSION_START -->.*<!-- VERSION_END -->/<!-- VERSION_START -->${{ env.VERSION }}<!-- VERSION_END -->/" README.md
+          sed -i "s/<!-- VERSION_START -->.*<!-- VERSION_END -->/<!-- VERSION_START -->$VERSION<!-- VERSION_END -->/" README.md
           
           # Also update the badge URL if it exists (optional polish)
-          VERSION_BADGE=$(echo "${{ env.VERSION }}" | sed 's/-/__/g' | sed 's/_/__/g')
+          VERSION_BADGE=$(echo "$VERSION" | sed 's/-/__/g' | sed 's/_/__/g')
           sed -i "s/badge\/Version-.*-blue/badge\/Version-${VERSION_BADGE}-blue/" README.md
 
       - name: Commit and Push changes
