Config: Increase Gradle heap size to 4GB to fix OOM error & Enable parallel build

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,16 @@
 # Project-wide Gradle settings.
-org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+# Increased memory to 1GB to fix DexMerging OOM error
+org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+
+# Android settings
 android.useAndroidX=true
-kotlin.code.style=official
 android.nonTransitiveRClass=true
+
+# Kotlin settings
+kotlin.code.style=official
+kotlin.incremental=true
+
+# Gradle optimizations
 org.gradle.daemon=true
-kotlin.incremental=false
+org.gradle.parallel=true
+org.gradle.caching=true
