Feat: Post-Update Welcome Dialog + build-fast.ps1 improvements
- SplashActivity: Show PostUpdateDialog with changelog after app update
- TXAPreferences: Add version tracking (getLastSeenVersionCode/setLastSeenVersionCode)
- UpdateDialog: Add PostUpdateDialog composable with WebView changelog
- TXATranslation: Add translation keys for post-update dialog
- build-fast.ps1: Complete rewrite with .env support, Git checks, GitHub Releases

--- a/tools/.env.example
+++ b/tools/.env.example
@@ -1,11 +1,6 @@
 # FILE BY TXA
 # Build environment configuration
-# Copy this to .env and update with your actual values
-
-# Keystore configuration (có thể để trống nếu chỉ build debug/keystore đã được cấu hình nơi khác)
-KEYSTORE_PASSWORD=
-KEY_PASSWORD=
-
+# Copy this to .env and update with your actual value
 # Git configuration for commits
 GIT_EMAIL=
 GIT_NAME=
