--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ TXABUILD/*.png
 TXABUILD/*.mp4
 TXABUILD/*.zip
 TXABUILD/*.mp3
+TXABUILD/*.xml
+TXABUILD/*.json
+TXABUILD/*.properties
+TXABUILD/*.apk
 
 # Log and text files
 *.log
