ci: Fix GitHub Actions 403 error by granting write permissions

--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -6,6 +6,10 @@ on:
       - 'version.properties'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
