feat: Implement FloatingLyricsService for overlay display
- Create FloatingLyricsService with Compose UI for floating lyrics overlay
- Add FOREGROUND_SERVICE_SPECIAL_USE permission for Android 14+
- Register service in AndroidManifest with specialUse type
- Connect settings toggle to start/stop FloatingLyricsService
- Service uses SYSTEM_ALERT_WINDOW permission for overlay display

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PLAYBACK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -98,6 +99,16 @@
             <meta-data
                 android:name="android.service.dream"
                 android:resource="@xml/music_dream_info" />
+        </service>
+
+        <!-- Floating Lyrics Overlay Service -->
+        <service
+            android:name=".service.FloatingLyricsService"
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="floating_lyrics_overlay" />
         </service>
 
         <activity
