--- a/.github/workflows/update_readme.yml
+++ b/.github/workflows/update_readme.yml
@@ -22,7 +22,8 @@ jobs:
       - name: Read version from properties
         id: read_version
         run: |
-          VERSION=$(grep 'versionName' version.properties | cut -d'=' -f2)
+          # Use grep and tr to handle potential Windows line endings (\r)
+          VERSION=$(grep 'versionName' version.properties | cut -d'=' -f2 | tr -d '\r' | tr -d ' ')
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           echo "Detected version: $VERSION"
 
@@ -31,14 +32,16 @@ jobs:
           VERSION: ${{ steps.read_version.outputs.VERSION }}
         run: |
           # Use sed to replace content between markers
-          sed -i "s/<!-- VERSION_START -->.*<!-- VERSION_END -->/<!-- VERSION_START -->$VERSION<!-- VERSION_END -->/" README.md
+          # Using | as separator in case version contains /
+          sed -i "s|<!-- VERSION_START -->.*<!-- VERSION_END -->|<!-- VERSION_START -->$VERSION<!-- VERSION_END -->|g" README.md
           
           # Also update the badge URL if it exists (optional polish)
           VERSION_BADGE=$(echo "$VERSION" | sed 's/-/__/g' | sed 's/_/__/g')
-          sed -i "s/badge\/Version-.*-blue/badge\/Version-${VERSION_BADGE}-blue/" README.md
+          sed -i "s|badge/Version-.*-blue|badge/Version-${VERSION_BADGE}-blue|g" README.md
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Docs: Auto-update README version to ${{ steps.read_version.outputs.VERSION }}"
           file_pattern: README.md
+          push_options: '--force'
