--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,13 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="audio/*" />
             </intent-filter>
+            <!-- Register Shortcut Actions -->
+            <intent-filter>
+                <action android:name="com.txapp.musicplayer.action.APP_SHORTCUT_SHUFFLE" />
+                <action android:name="com.txapp.musicplayer.action.APP_SHORTCUT_TOP_TRACKS" />
+                <action android:name="com.txapp.musicplayer.action.APP_SHORTCUT_LAST_ADDED" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
         <activity
