--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,6 +146,13 @@
             android:theme="@style/Theme.TXMusicPlayer.NoActionBar"
             android:label="@string/app_name" />
 
+        <!-- Widget Settings Activity -->
+        <activity
+            android:name=".appwidget.WidgetSettingsActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.TXMusicPlayer.NoActionBar" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -169,6 +176,19 @@
                 <action android:name="com.txapp.musicplayer.action.SHOW_HOLIDAY_NOTI" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
+        </receiver>
+
+        <!-- Music Widget -->
+        <receiver
+            android:name=".appwidget.TXAMusicWidget"
+            android:exported="true"
+            android:label="@string/widget_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_txa_music_info" />
         </receiver>
     </application>
 
