--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ TXABUILD/
 
 # JSON files (translation exports)
 *.json
+translation_keys_en.json
 
 # Android Studio Navigation editor temp files
 .navigation/
