Upgrade all widgets to Premium Glassmorphism UI and add TXA Circle widget - Refactored Classic, Mini, and Jumbo layouts to match high-fidelity previews - Added new TXA Circle (2x2) minimalist vinyl-style widget - Implemented dark glass backgrounds, gradient progress bars, and rounded aesthetics - Standardized widget labeling for optimal system recognition in Android 12+ picker

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -219,6 +219,20 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_big_info" />
         </receiver>
+
+        <!-- Music Widget - Circle (2x2) -->
+        <receiver
+            android:name=".appwidget.TXAMusicWidgetCircle"
+            android:exported="true"
+            android:label="@string/widget_circle_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.txapp.musicplayer.widget.UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_circle_info" />
+        </receiver>
     </application>
 
 </manifest>
