Added new widget sizes (Mini 1x1 and Square 2x2) and updated Classic preview - Created widget_txa_music_mini.xml (1x1) for minimalist album art display - Created widget_txa_music_square.xml (2x2) with balanced art and info display - Updated widget_classic_preview.webp using the uploaded premium image reference - Registered new widget providers and receivers in Manifest and Kotlin code - Refined widget names and descriptions for better UX

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -219,6 +219,34 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_big_info" />
         </receiver>
+
+        <!-- Music Widget - Mini (1x1) -->
+        <receiver
+            android:name=".appwidget.TXAMusicWidgetMini"
+            android:exported="true"
+            android:label="@string/widget_mini_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.txapp.musicplayer.widget.UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_mini_info" />
+        </receiver>
+
+        <!-- Music Widget - Square (2x2) -->
+        <receiver
+            android:name=".appwidget.TXAMusicWidgetSquare"
+            android:exported="true"
+            android:label="@string/widget_square_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.txapp.musicplayer.widget.UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/app_widget_square_info" />
+        </receiver>
     </application>
 
 </manifest>
