--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ kotlin.incremental=true
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
+gradle.user.home=D:/gradle_cache
