Remove Folder and Genre features, fix build issues with disk space

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 # Project-wide Gradle settings.
 # Increased memory to 1GB to fix DexMerging OOM error
-org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8 -XX:+UseParallelGC -Djava.io.tmpdir=D:/gradle_temp
 
 # Android settings
 android.useAndroidX=true
